--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "format": "prettier --write \"{src,scripts,test}/**/*.{js,ts}\""
   },
   "devDependencies": {
-    "@types/node": "^14.0.1",
-    "@types/prettier": "^2.0.0",
     "@types/fs-extra": "^8.0.0",
     "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.1",
+    "@types/prettier": "^2.0.0",
     "@types/webpack": "^4.32.1",
+    "eslint": "^7.3.0",
     "fast-glob": "^3.0.4",
     "fs-extra": "^9.0.0",
     "jest": "^25.1.0",
