--- a/example/package.json
+++ b/example/package.json
@@ -19,7 +19,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "z-auto-route": "^0.1.2"
   },
   "eslintConfig": {
     "root": true,
