--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prepublishOnly": "npm run clean && npm run build",
     "clean": "rm -rf lib",
     "build": "tsc -p src",
-    "dev": "jest --watch",
+    "dev": "tsc -p src --watch",
     "lint": "tslint -p . && prettier --list-different \"{src,scripts,test}/**/*.{js,ts}\"",
     "format": "prettier --write \"{src,scripts,test}/**/*.{js,ts}\""
   },
